--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,16 +20,15 @@ header {
     width: 960px;
     margin: auto;
     display: block;
-    clear: both;
-    content: normal;
+    position: relative;
 }
 
 .title {
     float: left;
     z-index: 2;
     background-color: #4caf50;
-    padding: 2px;
-    height: 7%;
+    padding: 2px 0 1px 0;
+    height: 60px;
     color: white;
 }
 
@@ -38,24 +37,25 @@ header {
 }
 
 .navButtons {
-    padding: 13px;
-    margin: 0;
     list-style-type: none;
 }
 
 .button {
     float: right;
+    display: block;
+    margin-top: 22px;
+    background-color: lightgray;
+    border-right: 1px solid darkgray;
 }
 
 .button a {
-    display: block;
-    padding: 8px;
     color: black;
-    background-color: lightgray;
     text-decoration: none;
+    padding: 22px 10px 21px 10px;
 }
 
 .button a.active {
+    margin-top: 0;
     background-color: #4caf50;
     color: white;
 }
@@ -70,6 +70,39 @@ header {
     background-color: white;
     font-family: 'Roboto', sans-serif;
     margin-top: 8px;
+}
+
+.contactMe {
+    width: 960px;
+    margin: auto;
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 8px;
+}
+
+.contactMe h2 {
+    background-color: lightgray;
+    padding: 20px;
+}
+
+.contactMe h3 {
+    margin-left: 40px;
+}
+
+.contactMe #ea {
+    width: 25%;
+    margin-left: 40px;
+}
+
+.contactMe h4 {
+    margin-left: 40px;
+}
+
+.contactMe #message {
+    width: 50%;
+    margin-left: 40px;
+    padding: 150px;
+    margin-bottom: 40px;
 }
 
 #amHead {
