--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
+* {
+    /* box-sizing: border-box; */
+}
+
 body {
     background-image: url("../images/dark-honeycomb.png");
     border: none;
     margin: auto;
+    font-family: 'Roboto', sans-serif;
 }
 
 .clearfix::after {
@@ -12,7 +17,6 @@ body {
 
 header {
     background-color: lightgray;
-    font-family: 'Roboto', sans-serif;
     display: block;
     z-index: 1;
     box-shadow: 0px 5px 5px black;
@@ -21,8 +25,8 @@ header {
 .container {
     width: 960px;
     margin: auto;
-    display: block;
-    position: relative;
+    /* display: block;
+    position: relative; */
 }
 
 .title {
@@ -39,6 +43,7 @@ header {
     margin: 10px;
 }
 
+/* Style of navigation buttons */
 .navButtons {
     margin: 0;
     list-style-type: none;
@@ -47,7 +52,7 @@ header {
 
 .navButtons li {
     float: right;
-    display: block;
+    /* display: inline; */
     margin-top: 22px;
     background-color: lightgray;
 }
@@ -75,6 +80,7 @@ header {
     color: darkgray;
 }
 
+/* Style of main content */
 .body {
     width: 960px;
     margin: auto;
